Changed some files

--- a/Dockerfile_Flask
+++ b/Dockerfile_Flask
@@ -1,19 +1,21 @@
-# Usage
-# docker build -t pasupath/sbbprojects .
-# docker run --name sbbprojects -e AZURE_STORAGE_CONNECTION_STRING='***' -p 9001:5000 -d pasupath/sbbprojects
+# Usage: docker-compose build
+# docker login mit user und token
+
 FROM python:3.12.1 AS backend
 
-# Copy Files
+# Setze das Arbeitsverzeichnis im Container 
 WORKDIR /usr/src/app/backend
-#COPY backend/backend.py backend/backend.py
-#COPY frontend/build frontend/build
+
+# Erforderliche Dateien kopieren
 COPY backend/ .
 
-# Install
+# Abhängigkeiten installieren
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-
+# EXPO
 EXPOSE 5001
 ENV FLASK_APP=/usr/src/app/backend/backend.py
+
+# Anwendung starten
 CMD [ "python", "-m" , "flask", "run", "--host=0.0.0.0", "--port=5001"]
